# vlc-playlist-creator

./: .gitignore  CMakeLists.txt  README.md  VLCPlaylistCreator.pro  config.h.in  configure  install.sh  main.cpp  videoprocessor.cpp  videoprocessor.h  vlc-playlist-creator.cpp  vlcplaylistcreator.cpp  vlcplaylistcreator.h
